@@ -159,6 +159,10 @@ enum gmCodeTreeNodeOperationType
   CTNOT_UNARY_MINUS,
   CTNOT_UNARY_COMPLEMENT,
   CTNOT_UNARY_NOT, 
+#if GM_USE_INCDECOPERATORS
+  CTNOT_PRE_DEC,
+  CTNOT_PRE_INC,
+#endif //GM_USE_INCDECOPERATORS
   CTNOT_ARRAY_INDEX,
   CTNOT_TIMES,
   CTNOT_DIVIDE,
